--- a/pom.xml
+++ b/pom.xml
@@ -3,4 +3,12 @@
   <groupId>senac-dd-20192-Demetrio</groupId>
   <artifactId>senac-dd-20192-Demetrio</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  
+  <dependencies>
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>5.1.38</version>
+		</dependency>
+	</dependencies>
 </project>
